--- a/static/main_site.html
+++ b/static/main_site.html
@@ -4,7 +4,18 @@
 </head>
 <body>
     <form action={{ url_for('game') }}>
-        
+        <select>
+                <option selected="selected" value = "Please select a number">Please select a number</option>
+            {% for i in range(1,9) %}
+                <option value={{ i }}> {{ i }}</option>
+            {% endfor %}
+        </select>
+        <select>
+            <option selected="selected" value = "Please select a number">Please select a number</option>
+            {% for i in range(2,9,2) %}
+                <option value={{ i }}> {{ i }}</option>
+            {% endfor %}
+        </select>
         <input type="submit" value="Play" id="Play">
     </form>
 </body>
